- Translations for LocalizeCategories, ManagePlaylists and presetWindow - Changed Translations.autoTranslate and added documentation for Translations class. - What is the CodeStyleConfig?

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -1,3 +1,19 @@
 # Translations for common strings. Full revision made for release 1.1.1
-yes=Ja
-no=Nej
+# Translation by: Stekeblad
+no = Nej
+yes = Ja
+startUpload = Stata uppladdning
+save = Spara
+hide = Dölj
+error = Fel
+edit = Redigera
+delete = Radera
+cancel = Avbryt
+app_settingsWindowTitle = Inställningar - Stekeblads Videouppladdare
+app_name = Stekeblads Videouppladdare
+aborted = Avbruten
+abort = Avbryt
+waiting = Väntar...
+app_locCatWindowTitle = Hämta kategorier
+app_manPlayWindowTitle = Hantera spellistor
+sorry = Förlåt
