--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -1,5 +1,3 @@
-# Translations for common strings. Full revision made for release 1.1.1
-# Translation by: Stekeblad
 no = Nej
 yes = Ja
 startUpload = Stata uppladdning
@@ -7,7 +5,7 @@ save = Spara
 hide = Dölj
 error = Fel
 edit = Redigera
-delete = Radera
+delete = Ta bort
 cancel = Avbryt
 app_settingsWindowTitle = Inställningar - Stekeblads Videouppladdare
 app_name = Stekeblads Videouppladdare
@@ -17,3 +15,17 @@ waiting = Väntar...
 app_locCatWindowTitle = Hämta kategorier
 app_manPlayWindowTitle = Hantera spellistor
 sorry = Förlåt
+auth_short = Autentisering krävs
+auth_full = För att göra detta måste du ge programmet tillgång din \
+Youtube kanal. Vill du ge "Stekeblads Video Uploader" \
+tillgång till din Youtube kanal? \n\nTillstånd krävs \
+för att programmet ska kunna ladda upp videor, ställa \
+in thumbnail, hämta en lista över kategorier, lägga till \
+videor i spellistor samt skapa nya spellistor. \n\nTryck \
+på Ja för att öppna din standardwebbläsare för att kunna \
+ge tillstånd eller Nej för att avbryta. Tyvärr fungerar \
+det inte att ge tillstånd genom Microsoft Edge, så om \
+det är din standardwebbläsare måste du tillfälligt \
+byta till en annan.
+diag_invalidCategory_short = Ogiltig kategori
+diag_invalidCategory_full = Du måste välja en kategori
