--- a/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
@@ -1,23 +1,14 @@
-#Text strings for the main window. Full revision made for release 1.1.1
-# Translation by: Stekeblad
-# Button Text
 btn_presets = Förinställningar
 btn_pickFile = Välj filer
 btn_applyPreset = Tillämpa förinställning
 btn_removeFinished = Ta bort färdiga uppladdningar
 btn_startAll = Starta alla redo uppladdningar
-btn_abortAll = Avbryt all pågående uppladdningar
+btn_abortAll = Avbryt alla pågående uppladdningar
 btn_abortAndClear = Avbryt alla och rensa uppladdningsrutan
-
-# Button Tooltip
 btn_removeFinished_tt = Tar bort alla uppladdningar som har "dölj"-knappen synlig
 btn_startAll_tt = Startar alla uppladdningar som har "Starta uppladdning"-knappen synlig
 btn_abortAll_tt = Avbryter alla uppladdningar som har "avbryt"-knappen synlig
 btn_abortAndClear_tt = Avbryter alla uppladdningar och rensar listan under
-
-# Other Tooltip
 txt_autoNum_tt = kräver att $(ep) taggen används i titeln för förinställningen
-
-# Label Text
 label_selectPreset = Välj en förinställning
 label_numbering = Automatisk numrering
