- Translated uploads and presets - If a upload is created without a preset the cancel button is now replaced by a delete button. - Renamed getUploadPane in VideoUpload and getPresetPane in VideoPreset to just getPane so it overrides the getPane from VideoInformationBase - Translations now have a second version of autoTranslate that takes a string if all Ids start with a prefix that is not part of the translation key, used to be able to translate presets and uploads. - Finished swedish - sweden translation

--- a/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
+++ b/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
@@ -16,6 +16,14 @@ kräver att vi har åtkomst till ditt Youtube-kanal på grund av \
 hur Youtubes API fungerar. Om du inte redan gett tillstånd \
 så komemr du bli ombedd att göra så när du trycker på knappen \
 "Hämta kategorier".
+diag_cantOpenBrowser = Av någon anledning kan vi inte öppna webbsidan i din \
+standardwebbläsare, men detta är url:en:\n%s
+diag_catReqFailed = Förfrågan att hämta kategorier misslyckades
+diag_invalidCodeResp = Den valda lands- elelr språkkoden är inte giltig eller \
+stöds inte av Youtube, fick inga kategorier
+diag_invalidCodes_full = En giltig kod är två tecken lång, både en landskod och en \
+språkkod är obligatoriskt
+diag_invalidCodes_short = Ogiltig kod
 downloading = Laddar ner...
 label_countryId = Land id
 label_langId = Språk id
