--- a/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
@@ -12,3 +12,36 @@ btn_abortAndClear_tt = Avbryter alla uppladdningar och rensar listan under
 txt_autoNum_tt = kräver att $(ep) taggen används i titeln för förinställningen
 label_selectPreset = Välj en förinställning
 label_numbering = Automatisk numrering
+diag_closeWarn_short = Avsluta programmet?
+diag_closeWarn_full = Vill du avsluta, nu? Det pågår fortfarande en eller fler \
+uppladdningar och de komemr att stoppas om du stänger \
+programmet. Vad vill du göra?
+diag_closeWarn_op1 = Stäng inte
+diag_closeWarn_op2 = Stoppa alla uppladdningar
+diag_closeWarn_op3 = Återuppta startade men ofärdiga uppladdningar nästa gång
+diag_noFiles_short = Inga filer valda
+diag_noFiles_full = Var god välj filer att ladda upp
+diag_abortAll_short = Avbryt ALLA uppladdninagar?
+diag_abortAll_full = Är du säker på att du vill avbryta alla startade \
+uppladdningar?
+diag_abortAllClear_short = Avbryt och ta bort ALLA uppladdningar?
+diag_abortAllClear_full = Är du säker på att du vill avbryta alla startade uppladdningar \
+och ta bort alla startade, avbrutna, avslutade och ännu ej \
+startade uppladdningar?
+diag_noPlaylists_short = Inga spellistor
+diag_noPlaylists_full = Inga spellistor har synkroniserats ännu, går till \
+förinställningar och hantera spellistor för att synktonisera \
+med Youtube
+diag_noVidTitle_short = Titel krävs
+diag_noVidTitle_full = Videon har ingen titel
+diag_backupNoRestore_short = Kan inte återställa
+diag_backupNoRestore_full = Vi är ledsna, men vi kunde inte återställa denna uppladdning \
+till hur den var före den redigerades
+diag_confirmDelete_short = Bekräfta borttagning
+diag_confirmDelete_full = Är du säker på att du vill ta bort "%s" från uppladdningskön?
+diag_noStartUpload_short = Kan inte starta uppladdning
+diag_noStartUpload_full_noTitle = Kan inte starta uppladdningen, videon har inget namn
+diag_noStartUpload_full_noCategory = Kan inte starta uppladdningen, kategori är inte valt eller \
+så är den ogiltig.
+diag_abortSingle_short = Avbryt uppladdning?
+diag_abortSingle_full = Är du säker på att du vill avbryta uppladdningen av "%s"?
