--- a/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
+++ b/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
@@ -8,6 +8,11 @@ diag_closeWarn_full = En eller fler förinställningar är i redigeringsläge, om du
 stänger fönstret nu kommer alla osparade ändringar att gå\
 förlorade. Vill du stänga fönstret?
 diag_closeWarn_short = Ej sparade ändringar
+diag_presetNeedName_full = förinställningsnamn får inte vara tomt
+diag_presetNeedName_short = Ogiltigt namn på förinställning
+diag_presetExist_full = Förinställningsnamn måste vara unikt, det finns redan en \
+förinställning med det namnet!
+diag_presetExist_short = Förinställning finns redan
 diag_tips = Först varningar:\n- Börja inte en rad i beskrivningen med \
 ett understreck ("_") för det kommer göra så att förinställningen \
 inte går att ladda igen!\n- Taggar måste separeras med komma \
