- Replaced uses of initialize with myInit add added a call to it at the end of the window creation (I want access to scene in the init method and it is not accessible in initilize) - Made it possible to quickly get to a relevant wiki page by pressing F1, does not currently always work. - Made the method in OpenInBrowser static and added a alternative version that just takes a String and silently errors if something went wrong - The word settings should not be used then referring to presets (may soon add a actual settings window)

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -7,7 +7,7 @@ error = Fel
 edit = Redigera
 delete = Ta bort
 cancel = Avbryt
-app_settingsWindowTitle = Inställningar - Stekeblads Videouppladdare
+app_presetWindowTitle = Förinställningar - Stekeblads Videouppladdare
 app_name = Stekeblads Videouppladdare
 aborted = Avbruten
 abort = Avbryt
@@ -29,3 +29,4 @@ det är din standardwebbläsare måste du tillfälligt \
 byta till en annan.
 diag_invalidCategory_short = Ogiltig kategori
 diag_invalidCategory_full = Du måste välja en kategori
+
