- Uploads that fail now have a red progressBar and a "reset" button instead of "abort" - Added a (probably temporary) condition in Uploader that directly throws an RuntimeException if the video title is "forceUploadFailure" - Added setProgressBarColor to VideoUpload - Switched place of the buttons and the progressBar in VideoUpload panes -

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -29,4 +29,5 @@ det är din standardwebbläsare måste du tillfälligt \
 byta till en annan.
 diag_invalidCategory_short = Ogiltig kategori
 diag_invalidCategory_full = Du måste välja en kategori
+reset = Återställ
 
