--- a/src/main/resources/strings/uploader/uploader_sv_SE.properties
+++ b/src/main/resources/strings/uploader/uploader_sv_SE.properties
@@ -1,4 +1,5 @@
 doneWithLink = Färdig! Videon är här: %s
+failed = Uppladdningen misslyckades
 finished = Uppladdning färdig
 notStarted = Uppladdning inte startad
 playlist = Lägger till i spellista "%s"
