- Added button to open settings window in main window -  Created class TranslationsMeta that loads all translation files in stings/meta/ to make all of them easy accessible in settings window - improved error message that appear when a preset failed to load - the settings window can now list all translations (that have a meta file) and display the meta details about them, can not change language yet

--- a/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
@@ -45,3 +45,4 @@ diag_noStartUpload_full_noCategory = Kan inte starta uppladdningen, kategori är 
 så är den ogiltig.
 diag_abortSingle_short = Avbryt uppladdning?
 diag_abortSingle_full = Är du säker på att du vill avbryta uppladdningen av "%s"?
+btn_settings = Inställningar
