--- a/src/main/resources/strings/meta/meta_sv_SE.properties
+++ b/src/main/resources/strings/meta/meta_sv_SE.properties
@@ -3,3 +3,4 @@ lastFullReview = 2018-03-28
 lastAppVersionReview = 1.1.1
 lastUpdate = 2018-03-28
 translationName = Svenska - Sverige
+locale = sv_SE
