--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -30,4 +30,6 @@ byta till en annan.
 diag_invalidCategory_short = Ogiltig kategori
 diag_invalidCategory_full = Du måste välja en kategori
 reset = Återställ
+app_settingsWindowTitle = Inställningar - Stekeblads Videouppladdare
+errOpenWindow = Kunde inte öppna fönstret
 
