- Created a system for creating and changing sets of buttons (states), states is used in preset window and main window. - Added a Clone button to presets

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -32,4 +32,5 @@ diag_invalidCategory_full = Du måste välja en kategori
 reset = Återställ
 app_settingsWindowTitle = Inställningar - Stekeblads Videouppladdare
 errOpenWindow = Kunde inte öppna fönstret
+clone = Klona
 
