--- a/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
+++ b/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
@@ -28,5 +28,6 @@ label_savedPresets = Sparade förinställningar
 txt_nameNewPreset_pt = Ange ett namn
 diag_presetDelete_short = Bekräfta borttagning
 diag_presetDelete_full = Är du säker på att du vill ta bort förinställningen "%s"?
+copyOf = Kopia av-
 
 
