- Preset and playlist choiceBox now have a default option for no preset or playlist should be used (text translatable) - Thumbnail can now be reset to default in the new right click menu for thumbnails - You can now go to the YouTube overview page for your playlist by right clicking on them and selecting view on YouTube - More/Better checks for video/thumbnail file does no longer exist

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -33,4 +33,6 @@ reset = Återställ
 app_settingsWindowTitle = Inställningar - Stekeblads Videouppladdare
 errOpenWindow = Kunde inte öppna fönstret
 clone = Klona
+noSelected = --INGEN VALD--
+resetToDefault = Återställ till standard
 
