--- a/src/main/resources/strings/manPlayWindow/manPlayWindow_sv_SE.properties
+++ b/src/main/resources/strings/manPlayWindow/manPlayWindow_sv_SE.properties
@@ -10,3 +10,4 @@ label_description = Välj vilka spellistor som ska synas i rullgardinerna för \
 spellista, urbockade kommer att döljas
 txt_newPlaylistName_pt = namnge ny spellista
 diag_creatingFailed = Kunde inte skapa ny spellista
+viewOnYouTube = Visa på YouTube
