- It should not be possible anymore to select null as playlist or category previously this happened if you opened the drop down and then clicked outside the list. While fixing I ended up moving some of the category and playlist logic from the WindowControllers to VideoInformationBase - I think I made Uploader threadsafe (safer?)

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -35,4 +35,8 @@ errOpenWindow = Kunde inte öppna fönstret
 clone = Klona
 noSelected = --INGEN VALD--
 resetToDefault = Återställ till standard
+diag_categoryRemoved_short = Kategorin finns inte längre
+diag_categoryRemoved_full = Den valda kategorin finns inte längre. Om du ändrat språk på \
+kategorierna måste du trycka på avbryt och sedan redigera igen \
+för att listan ska uppdateras.
 
