--- a/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
+++ b/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
@@ -2,11 +2,13 @@ btn_cancel = Avbryt
 btn_codeListCountry = Kodlista
 btn_codeListLang = Kodlista
 btn_getCategories = Hämta kategorier
-description = Viste du att Youtube has olika kategorier i olika länder och \
+description = Före du ändrar kategoridata: Spara alla förinställningar och \
+videor du redigerar, de aktuella kategorierna kommer att bli \
+ogiltiga och du kommer inte kunna spara ändringarna du gjort!\n\n\
+Viste du att Youtube has olika kategorier i olika länder och \
 att det interna kategoriId-numret för en kategori kan skilja \
 sig mellan länder? För att din video ska hamna i rätt \
-kategori behöver vi få reda på i vilket land du bor. (Vi gör \
-det till en hemlighet mellan dig och Youtube.) Språkfältet \
+kategori behöver programmet få reda på i vilket land du bor. Språkfältet \
 låter dig hämta kategoriernas namn på vilket språk som helst \
 som Youtube stödjer. Fälten måste ha den offeciella \
 två-tecken koden för språket/landet. Kodlista-knapparna öppnar \
