--- a/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
@@ -1,4 +1,6 @@
 btn_clearStoredData = RENSA PROGRAMDATA
+btn_clearStoredData_tt = Klicka för att visa en bekräftelse pop-upp som förklarar vad \
+som kommer tas bort med ett alternativ för att avbryta
 btn_gotoDownload = Programmets nerladdningssida
 btn_gotoMainPage = Hemsida
 btn_gotoWiki = Wiki
@@ -7,7 +9,8 @@ att trycka på F1 när det är i fokus (prova nu)
 btn_translationDetails = Om denna översättning
 diag_clearStoredData_full = Detta kommer att radera alla förinställningar, den sparade \
 YouTube inloggningen (inte kontot), det lokala spellistefiltret \
-och alla andra inställningar!\
+och alla andra inställningar! \
+\nAlla dina videor, spellistor etc. på YouTube kommer INTE att påverkas.\
 \n\nÄr du riktigt, riktigt säker på att du vill göra detta?
 diag_clearStoredData_short = Rensa data - VARNING!
 diag_delAfterExit_full = Alla inställningar kommer att tas bort efter att programmet avslutats
