- fixed bug with deleting uploads - changed so presets that has never been saved (clones and newly created) have a delete button instead of cancel - fixes in resetting failed uploads - uploader should now displays progress in whole percent, the decimal was never used so it looked ugly - If an error occurs when loading saved presets, the error message should now be possible to close without closing the preset window. Said error message will also include the data in the failing presets save file

--- a/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
+++ b/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
@@ -1,6 +1,7 @@
 btn_addNewPreset = Skapa ny förinställning
 btn_localizeCategories = Hämta kategorier
-btn_localizeCategories_tt = Hämta alla kategorier som får användas i ditt land, översatta till ett språk du förstår
+btn_localizeCategories_tt = Hämta alla kategorier som får användas i ditt land, översatta till ett språk du förstår.\n\
+Du kan inte ändra detta om en eller fler förinställnngar/uppladdningar är i redigeringsläge eller om en uppladdning pågår.
 btn_managePlaylists = Hantera spellistor
 btn_managePlaylists_tt = Hämta dina spellistor från YouTube in i programmet och filtera vilka som ska synas i rullgardinerna för spellista
 btn_tips = Tips
