--- a/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
@@ -12,3 +12,4 @@ _visibility_tt = Hur ska man kunna hitta videon?\n\
 public - alla kan se den\n\
 private - endast du kan se den\n\
 unlisted - videolänken krävs för att hitta videon
+failed = Uppladdningen misslyckades
