- Updated YouTube API - Dropped the Module idea for now - Fixed some warnings - Updated AlertUtils.yesNo to make use of new features for Optional - Updated Ant build script

--- a/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
@@ -6,7 +6,7 @@ _status = Uppladdning inte startad
 _tags_pt = lista, med, taggar, separerade, med, komma, och, mellanslag
 _tellSubs_tt = Ska kanalens prenumeranter få en notifikation om att en ny \
 video har laddats upp? Rekommenderas inte om du laddar upp \
-många videor. 
+många videor
 _title_pt = Videotitel
 _visibility_tt = Hur ska man kunna hitta videon?\n\
 public - alla kan se den\n\
