- Created PresetApplicator for offloading the process of applying presets on videos to a background thread. Reason: During testing the process of finding meta data in files could take towards a minute.

--- a/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
@@ -12,6 +12,7 @@ btn_abortAndClear_tt = Avbryter alla uppladdningar och rensar listan under
 txt_autoNum_tt = kräver att $(ep) taggen används i titeln för förinställningen
 label_selectPreset = Välj en förinställning
 label_numbering = Automatisk numrering
+label_presetProgress = Applying preset... (%d left)
 diag_closeWarn_short = Avsluta programmet?
 diag_closeWarn_full = Vill du avsluta, nu? Det pågår fortfarande en eller fler \
 uppladdningar och de komemr att stoppas om du stänger \
