- Added meta data tool window - Removed the small horizontal scroll bar in mainWindow and PresetWindow - Updated YouTube API version

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -12,8 +12,8 @@ app_name = Stekeblads Videouppladdare
 aborted = Avbruten
 abort = Avbryt
 waiting = Väntar...
-app_locCatWindowTitle = Hämta kategorier
-app_manPlayWindowTitle = Hantera spellistor
+app_locCatWindowTitle = Hämta kategorier - Stekeblads Videouppladdare
+app_manPlayWindowTitle = Hantera spellistor - Stekeblads Videouppladdare
 sorry = Förlåt
 auth_short = Autentisering krävs
 auth_full = För att göra detta måste du ge programmet tillgång din \
@@ -39,4 +39,5 @@ diag_categoryRemoved_short = Kategorin finns inte längre
 diag_categoryRemoved_full = Den valda kategorin finns inte längre. Om du ändrat språk på \
 kategorierna måste du trycka på avbryt och sedan redigera igen \
 för att listan ska uppdateras.
+app_metaToolWindowTitle = Metadata-verktyget - Stekeblads Videouppladdare
 
