--- a/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
+++ b/src/main/resources/strings/presetWindow/presetWindow_sv_SE.properties
@@ -16,15 +16,15 @@ förinställning med det namnet!
 diag_presetExist_short = Förinställning finns redan
 diag_tips = Först varningar:\n- Börja inte en rad i beskrivningen med \
 ett understreck ("_") för det kommer göra så att förinställningen \
-inte går att ladda igen!\n- Taggar måste separeras med komma \
+inte går att ladda igen!\n- Video-taggar måste separeras med komma \
 och mellanslag, att glömma mellanslaget gör att kommat blir \
-en del av taggen.\nOk, tips!\n- I fältet för videotiteln kan \
-du skriva "$(ep)" för att säga åt programmet var avsnittsnummer \
-ska sättas in när uppladdningar skapas.\n- I titeln kan också \
-"$(rawname)" användas för att sätta in namnet på vald videofil\
-\n- I beskrivningen kan "$(playlist)" användas för att \
-automatiskt sätta in en länk till den spellista som valts för \
-förinställningen.
+en del av taggen.\nOk, tips!\
+\nDet finns flera kraftfulla "taggar" som du kan använda i \
+förinställningar, till exempel $(ep) som automatiskt kan numrera \
+dina videor och $(playlist) som infogar en länk till spelistan \
+som videorna läggs till i. Du kan hitta alla tillgänliga taggar \
+på wikin. Snabbaste vägen dit är att stänga detta fönster \
+och klicka på F1-tangenten
 label_savedPresets = Sparade förinställningar
 txt_nameNewPreset_pt = Ange ett namn
 diag_presetDelete_short = Bekräfta borttagning
