--- a/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
@@ -6,6 +6,8 @@ btn_gotoMainPage = Hemsida
 btn_gotoWiki = Wiki
 btn_gotoWiki_tt = Du kan också gå direkt till wikisidan för ett fönster genom\
 att trycka på F1 när det är i fokus (prova nu)
+btn_metaDataTool = Metadata-verktyget
+btn_metaDataTool_tt = Välj en fil och få en lista över all meta data som hittades i den
 btn_translationDetails = Om denna översättning
 diag_clearStoredData_full = Detta kommer att radera alla förinställningar, den sparade \
 YouTube inloggningen (inte kontot), det lokala spellistefiltret \
@@ -18,3 +20,4 @@ diag_delAfterExit_short = Radering schemalagd
 label_langSelect = Språkinställningar
 label_links = Länkar
 label_resetSettings = Återställ programinställningar
+label_tools = Verktyg
