Moved translation for "downloading" from localize family to base family Added back a check for if file exists in refreshPlaylists Hit the ant with my largest hammer (repaired my ant build script that broke when I updated th eYouTube API version, not versioned but I mention it anyway)

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -40,4 +40,5 @@ diag_categoryRemoved_full = Den valda kategorin finns inte längre. Om du ändrat 
 kategorierna måste du trycka på avbryt och sedan redigera igen \
 för att listan ska uppdateras.
 app_metaToolWindowTitle = Metadata-verktyget - Stekeblads Videouppladdare
+downloading = Laddar ner...
 
