Updated YouTube API version and finally found a way to build releases with Gradle instead of Ant that barely worked

--- a/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
@@ -15,7 +15,7 @@ label_numbering = Automatisk numrering
 label_presetProgress = Tillämpar förinställning... (%d kvar)
 diag_closeWarn_short = Avsluta programmet?
 diag_closeWarn_full = Vill du avsluta, nu? Det pågår fortfarande en eller fler \
-uppladdningar och de komemr att stoppas om du stänger \
+uppladdningar och de kommer att stoppas om du stänger \
 programmet. Vad vill du göra?
 diag_closeWarn_op1 = Stäng inte
 diag_closeWarn_op2 = Stoppa alla uppladdningar
@@ -47,3 +47,4 @@ så är den ogiltig.
 diag_abortSingle_short = Avbryt uppladdning?
 diag_abortSingle_full = Är du säker på att du vill avbryta uppladdningen av "%s"?
 btn_settings = Inställningar
+diag_loadWaitingUploads = Kunde inte ladda uppladdningar från förra gången
