--- a/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
@@ -1,5 +1,7 @@
 _category_tt = Videokategori på Youtube
 _description_pt = Videobeskrivning
+_madeForKids = Markera videon som "Made for kids"
+_madeForKids_tt = Högerklicka för att öppna hjälp om Made for kids i din webbläsare
 _playlist_tt = Välj en spellista att lägga till denna video i
 _presetName_pt = förinställningsnamm
 _status = Uppladdning inte startad
