Issue #12: Created update checker -- Added Google Tink for verifying the digtal signature of the downloaded update -- Added okhhtp3 For easier HTTP-requests

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -41,4 +41,10 @@ kategorierna måste du trycka på avbryt och sedan redigera igen \
 för att listan ska uppdateras.
 app_metaToolWindowTitle = Metadata-verktyget - Stekeblads Videouppladdare
 downloading = Laddar ner...
+close = Stäng
+update_available_short = Uppdatering tillgänglig
+update_available_full = Uppdatering tillgänglig, vill du ladda ner den? \
+Release-anteckningar för alla versioner och manuella nerladdningar \
+finns på GitHub, länkar finns i inställningsfönstret.\
+\n\nNy version: 
 
