--- a/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
@@ -9,6 +9,12 @@ att trycka på F1 när det är i fokus (prova nu)
 btn_metaDataTool = Metadata-verktyget
 btn_metaDataTool_tt = Välj en fil och få en lista över all meta data som hittades i den
 btn_translationDetails = Om denna översättning
+btn_updateNow = Sök efter uppdateringar nu
+check_checkForUpdates = Sök efter uppdateringar automatiskt
+check_silentUpdates = Uppdatera i bakgrunden
+check_silentUpdates_tt = om ikryssat, nya uppdateringar kommer laddas ner utan att \
+visa några pop-upper eller fönster. Nästa gång du öppnar \
+programmet kommer du magiskt ha den nyaste versionen.
 diag_clearStoredData_full = Detta kommer att radera alla förinställningar, den sparade \
 YouTube inloggningen (inte kontot), det lokala spellistefiltret \
 och alla andra inställningar! \
@@ -21,3 +27,4 @@ label_langSelect = Språkinställningar
 label_links = Länkar
 label_resetSettings = Återställ programinställningar
 label_tools = Verktyg
+label_updater = Uppdateringsinställningar
