--- a/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
@@ -8,6 +8,10 @@ btn_gotoWiki_tt = Du kan också gå direkt till wikisidan för ett fönster genom\
 att trycka på F1 när det är i fokus (prova nu)
 btn_metaDataTool = Metadata-verktyget
 btn_metaDataTool_tt = Välj en fil och få en lista över all meta data som hittades i den
+btn_privacy = Privacy policy
+btn_privacy_tt = Ett sådant dokument man måste skriva även om ingen läser det...
+btn_reportBug = Rapportera en bugg
+btn_reportBug_tt = Rapportera en bugg, föreslå en funktion och ställ frågor här
 btn_translationDetails = Om denna översättning
 btn_updateNow = Sök efter uppdateringar nu
 check_checkForUpdates = Sök efter uppdateringar automatiskt
@@ -15,12 +19,17 @@ check_silentUpdates = Uppdatera i bakgrunden
 check_silentUpdates_tt = om ikryssat, nya uppdateringar kommer laddas ner utan att \
 visa några pop-upper eller fönster. Nästa gång du öppnar \
 programmet kommer du magiskt ha den nyaste versionen.
-diag_clearStoredData_full = Detta kommer att radera alla förinställningar, den sparade \
-YouTube inloggningen (inte kontot), det lokala spellistefiltret \
-och alla andra inställningar! \
-\nAlla dina videor, spellistor etc. på YouTube kommer INTE att påverkas.\
-\n\nÄr du riktigt, riktigt säker på att du vill göra detta?
-diag_clearStoredData_short = Rensa data - VARNING!
+diag_clearStoredData_full = Vill du koppla bort Stekeblads Videouppladdare från din \
+YouTube-kanal och radera alla förinställningar, dey lokala \
+spellistefiltret och andra inställningar?\n\n\
+Om du gör det så kommer utloggningsförfrågan skickas till \
+YouTube omedelbart, men det kan ta en stund innan den har någon \
+effekt. Förinställningar etc. raderas efter att du avslutat programmet.\
+OBS: Om du inte loggat in med YouTube så kommer utloggningsknappen \
+fungera som avbrytknappen.
+diag_clearStoredData_optDel = Radera
+diag_clearStoredData_optLogOutDel = Logga ut och radera
+diag_clearStoredData_short = Rensa data och logga ut
 diag_delAfterExit_full = Alla inställningar kommer att tas bort efter att programmet avslutats
 diag_delAfterExit_short = Radering schemalagd
 label_langSelect = Språkinställningar
