Tiny changes not worth naming

--- a/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
+++ b/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
@@ -21,7 +21,7 @@ så komemr du bli ombedd att göra så när du trycker på knappen \
 diag_cantOpenBrowser = Av någon anledning kan vi inte öppna webbsidan i din \
 standardwebbläsare, men detta är url:en:\n%s
 diag_catReqFailed = Förfrågan att hämta kategorier misslyckades
-diag_invalidCodeResp = Den valda lands- elelr språkkoden är inte giltig eller \
+diag_invalidCodeResp = Den valda lands- eller språkkoden är inte giltig eller \
 stöds inte av Youtube, fick inga kategorier
 diag_invalidCodes_full = En giltig kod är två tecken lång, både en landskod och en \
 språkkod är obligatoriskt
