Reviewed and fixed a number of warnings and suggestions from IntelliJ

--- a/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
+++ b/src/main/resources/strings/mainWindow/mainWindow_sv_SE.properties
@@ -43,7 +43,7 @@ diag_confirmDelete_full = Är du säker på att du vill ta bort "%s" från uppladdni
 diag_noStartUpload_short = Kan inte starta uppladdning
 diag_noStartUpload_full_noTitle = Kan inte starta uppladdningen, videon har inget namn
 diag_noStartUpload_full_noCategory = Kan inte starta uppladdningen, kategori är inte valt eller \
-så är den ogiltig.
+så är den ogiltig
 diag_abortSingle_short = Avbryt uppladdning?
 diag_abortSingle_full = Är du säker på att du vill avbryta uppladdningen av "%s"?
 btn_settings = Inställningar
