--- a/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
+++ b/src/main/resources/strings/settingsWindow/settingsWindow_sv_SE.properties
@@ -18,7 +18,7 @@ check_checkForUpdates = Sök efter uppdateringar automatiskt
 check_silentUpdates = Uppdatera i bakgrunden
 check_silentUpdates_tt = om ikryssat, nya uppdateringar kommer laddas ner utan att \
 visa några pop-upper eller fönster. Nästa gång du öppnar \
-programmet kommer du magiskt ha den nyaste versionen.
+programmet kommer du magiskt ha den nyaste versionen
 diag_clearStoredData_full = Vill du koppla bort Stekeblads Videouppladdare från din \
 YouTube-kanal och radera alla förinställningar, dey lokala \
 spellistefiltret och andra inställningar?\n\n\
