- Removed tooltip tweak code because it does not work in Java 11 - Fixed close button in longMsg alert dialogs - Fixed update categories only used the language/region code from last time instead of the entered values - Corrected a typo

--- a/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
+++ b/src/main/resources/strings/locCatWindow/locCatWindow_sv_SE.properties
@@ -16,7 +16,7 @@ en lista över länder/språk och deras koder i din \
 standardwebbläsare. Och, det kanske låter konstigt men detta \
 kräver att vi har åtkomst till ditt Youtube-kanal på grund av \
 hur Youtubes API fungerar. Om du inte redan gett tillstånd \
-så komemr du bli ombedd att göra så när du trycker på knappen \
+så kommer du bli ombedd att göra så när du trycker på knappen \
 "Hämta kategorier".
 diag_cantOpenBrowser = Av någon anledning kan vi inte öppna webbsidan i din \
 standardwebbläsare, men detta är url:en:\n%s
