Updated YouTube API version and limited updater to not be able to automatically update if the major version number changed

--- a/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
+++ b/src/main/resources/strings/baseStrings/baseStrings_sv_SE.properties
@@ -47,4 +47,7 @@ update_available_full = Uppdatering tillgänglig, vill du ladda ner den? \
 Release-anteckningar för alla versioner och manuella nerladdningar \
 finns på GitHub, länkar finns i inställningsfönstret.\
 \n\nNy version: 
+update_available_noAuto_full = En ny stor uppdatering är tillgänglig. Uppdateringen innehåller \
+ändringar som gör att den inte kan hämtas automatiskt, \
+vill du ladda ner den manuellt?
 
