Created new models for presets, uploads and other objects. Started to updated usages for them and the new manager classes

--- a/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
@@ -15,3 +15,4 @@ public - alla kan se den\n\
 private - endast du kan se den\n\
 unlisted - videolänken krävs för att hitta videon
 failed = Uppladdningen misslyckades
+resetToDefault = Återställ till standard
