--- a/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
+++ b/src/main/resources/strings/presetsUploads/presetsUploads_sv_SE.properties
@@ -1,18 +1,15 @@
-_category_tt = Videokategori på Youtube
+_category_tt = Videokategori pÃ¥ Youtube
 _description_pt = Videobeskrivning
 _madeForKids = Markera videon som "Made for kids"
-_madeForKids_tt = Högerklicka för att öppna hjälp om Made for kids i din webbläsare
-_playlist_tt = Välj en spellista att lägga till denna video i
-_presetName_pt = förinställningsnamm
+_madeForKids_tt = HÃ¶gerklicka fÃ¶r att Ã¶ppna hjÃ¤lp om Made for kids i din webblÃ¤sare
+_playlist_tt = VÃ¤lj en spellista att lÃ¤gga till denna video i
+_presetName_pt = fÃ¶rinstÃ¤llningsnamm
 _status = Uppladdning inte startad
 _tags_pt = lista, med, taggar, separerade, med, komma, och, mellanslag
-_tellSubs_tt = Ska kanalens prenumeranter få en notifikation om att en ny \
-video har laddats upp? Rekommenderas inte om du laddar upp \
-många videor.
 _title_pt = Videotitel
 _visibility_tt = Hur ska man kunna hitta videon?\n\
 public - alla kan se den\n\
 private - endast du kan se den\n\
-unlisted - videolänken krävs för att hitta videon
+unlisted - videolÃ¤nken krÃ¤vs fÃ¶r att hitta videon
 failed = Uppladdningen misslyckades
-resetToDefault = Återställ till standard
+resetToDefault = Ã…terstÃ¤ll till standard
